check_output.txt
    Checking rust_tetris v0.1.0 (C:\Users\flore\Desktop\rustTetris)
error[E0422]: cannot find struct, variant or union type `Block` in module `crate::bidule`
   --> src\game.rs:767:70
    |
767 |                          self.grid.cells[y][x] = Some(crate::bidule::Block {
    |                                                                      ^^^^^ not found in `crate::bidule`

warning: unused import: `crate::constants::*`
 --> src\effects.rs:3:5
  |
3 | use crate::constants::*;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0422`.
warning: `rust_tetris` (bin "rust_tetris") generated 1 warning
error: could not compile `rust_tetris` (bin "rust_tetris") due to 1 previous error; 1 warning emitted
